--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <!--La div ayant les applications DEBUT-->
     <section class="apps">
         <h2 id="apps">Les Applications</h2>
-        <p class="description">Ici se trouve les applications que j'ai créées sur <a class="lien_magique" href="https://github.com/DzenetanMassart?tab=repositories" title="Allons-y !">mon Github  </a>!</p>
+        <p class="description">Ici se trouvent les applications que j'ai créées sur <a class="lien_magique" href="https://github.com/DzenetanMassart?tab=repositories" title="Allons-y !">mon Github  </a>!</p>
         <div class="appsview" id="generate"></div>
     </section>
     <!--La div ayant les applications FIN-->
@@ -236,7 +236,7 @@
     <!--La div ayant le parcours DEBUT-->
     <section class="parcours">
         <h2 id="parcours">Le Parcours</h2>
-        <p class="description">Ici se trouve mon parcours d'apprentissage des logiciels !</p>
+        <p class="description">Ici se trouvent mon parcours d'apprentissage des logiciels !</p>
         <div class="parc" id="parc">
 
         </div>
