CV amélioré en PDF et en HTML

--- a/CV.html
+++ b/CV.html
@@ -1,19 +1,10 @@
-<!Doctype html>
+<!DOCTYPE html>
+<html lang="fr">
 
 <head>
-    <meta charset="UTF-8" />
-    <title>Dzénetan Massart-Le CV</title>
-    <meta name="description" content="Le CV de Dzénetan Massart" />
-    <meta name="keywords" content="CV,Dzénetan,Massart,vidéo,gif,applications,Github" />
-    <meta name="author" content="Dzénetan Massart" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/css/cv.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="assets/css/cv_print.css" media="print">
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="57x57" href="root/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="root/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="root/apple-icon-72x72.png">
@@ -27,120 +18,68 @@
     <link rel="icon" type="image/png" sizes="32x32" href="root/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="root/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="root/favicon-16x16.png">
+    <title>CV Dzénetan Massart</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/cv_02.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+
+
 </head>
 
 <body>
+    <!--Le header DEBUT-->
     <header>
-        <div> <img src="root/android-icon-192x192.png" class="profil" />
-        </div>
-        <div>
-            <h1>MASSART DZÉNETAN</h1>
-            <p class="type">
-                <span>VideoMaker</span>
-                <span>Photographe</span>
-                <span>Community Manager</span>
-                <span>Codeur Javascript</span>
-            </p>
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <img src="assets/image/profil.jpeg" id="profil" class="profil" />
+
+
+            <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fas fa-vector-square"></i>
+                        </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#apps">Applications</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#parcours">Parcours</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Acceuil</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                  Réseau
+                                </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="https://github.com/DzenetanMassart?tab=repositories">Github</a>
+                            <a class="dropdown-item" href="https://www.linkedin.com/in/dzenetan-massart/">Linkedin</a>
+                            <a class="dropdown-item" href="https://www.youtube.com/channel/UCpZE_eV7wKf7sJXvpPGP-ZA/videos">YouTube</a>
+                            <a class="dropdown-item" href="https://www.behance.net/dznetanmassart">Behance</a>
+                            <a class="dropdown-item" href="https://sketchfab.com/DzenetanMassart/models">Sketchfab</a>
+                            <a class="dropdown-item" href="https://www.codewars.com/users/DzenetanMassart">Codewars</a>
+                            <a class="dropdown-item" href="https://www.pinterest.fr/MakeOnWebsoft/_saved/">Pinterest</a>
+
+                        </div>
+                    </li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="CV_html.html#banniere">Version HTML</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
+    <!--Le header FIN-->
+
     <main>
-        <section class="gauche">
-
-
-            <h2>COORDONNÉES</h2>
-            <p>Né à Namur le 5 juillet 1996, Célibataire,</p>
-            <p>dzenetan.massart@gmail.com</p>
-
-            <h2>RÉSEAUX</h2>
-            <p><a href="https://github.com/DzenetanMassart">https://github.com/DzenetanMassart</a></p>
-            <p><a href="https://www.linkedin.com/in/dzenetan-massart">https://www.linkedin.com/in/dzenetan-massart</a></p>
-            <p><a href="https://sketchfab.com/DzenetanMassart/models">https://sketchfab.com/DzenetanMassart/models</a></p>
-            <p><a href="https://www.behance.net/dznetanmassart">https://www.behance.net/dznetanmassart</a></p>
-
-
-            <h2>LANGUES MAÎTRISÉES</h2>
-            <p>Français (Langue maternelle)</p>
-            <p>Anglais (Niveau technique, spécialisé "infographie")</p>
-        </section>
-
-        <section class="droit">
-
-
-
-            <h2>COMPÉTENCES</h2>
-            <h3>Video</h3>
-            <ul>
-                <li>Adobe Premiere</li>
-                <li>Adobe AfterEffect</li>
-                <li>Magix Video Deluxe</li>
-            </ul>
-
-            <h3>Photographie</h3>
-            <ul>
-                <li>Nikon D3300</li>
-                <li>Samsung Galaxy A71 128GB</li>
-            </ul>
-            <h3>Optimisation des réseaux sociaux</h3>
-            <ul>
-                <li>YouTube</li>
-                <li>Twitter</li>
-                <li>Facebook</li>
-                <li>LinkedIn</li>
-            </ul>
-            <h3>Coding ( Visual Studio Code )</h3>
-            <ul>
-                <li>CSS</li>
-                <li>SCSS</li>
-                <li>HTML5</li>
-                <li>Javascript</li>
-                <li>WordPress</li>
-                <li>Bootstrap</li>
-                <li>PHP</li>
-                <li>GIT</li>
-            </ul>
-            <h3>Gestion d'image</h3>
-            <ul>
-                <li>Adobe Photoshop</li>
-                <li>PaintDotNet</li>
-                <li>Adobe Illustrator</li>
-            </ul>
-
-            <h3>3D</h3>
-            <ul>
-                <li>Autodesk 3DSmax</li>
-                <li>Autodesk Maya</li>
-            </ul>
-
-            <h3>Mise en page</h3>
-            <ul>
-                <li>Adobe InDesign</li>
-            </ul>
-
-
-            <h2>Formations</h2>
-            <ul>
-                <li> 2020-2021- Formation de Community Manager - FormationÀDistance.be
-                </li>
-                <li> 2019- Formation en développement Web- BeCode- Charleroi
-                </li>
-                <li>2017-2019 -Infographie - HEAJ- Namur
-                </li>
-                <li>2012-2016- Enseignement Général - CollègePieX - Châtelineau
-                </li>
-            </ul>
-            <h2>Stages</h2>
-            <ul>
-                <li> 2019-WordPress Charleroi-Entreprendre
-                </li>
-            </ul>
-        </section>
+        <embed src="assets/cv/Dzénetan Massart CV Online.pdf" type='application/pdf' />
     </main>
 
-    <div class="retour"><a href="index.html">Retourner à la page d'acceuil</a></div>
-
-
-
-
-
-
 </body>
+
+</html>
