Changement de photo de header

--- a/CV.html
+++ b/CV.html
@@ -33,7 +33,7 @@
     <!--Le header DEBUT-->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <img src="assets/image/profil.jpeg" id="profil" class="profil" />
+            <a href="index.html"></a><img src="root/android-icon-192x192.png" id="profil" class="profil" /> </a>
 
 
             <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
