--- a/CV_html.html
+++ b/CV_html.html
@@ -33,7 +33,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <img src="assets/image/profil.jpeg" id="profil" class="profil" />
+            <a href="index.html"></a><img src="root/android-icon-192x192.png" id="profil" class="profil" /> </a>
 
             <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-vector-square"></i>
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="index.html#parcours">Parcours</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Acceuil</a>
+                        <a class="nav-link" href="index.html">Accueil</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
