--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     <!--Le header DEBUT-->
     <header class="dark background">
         <nav class="navbar navbar-expand-lg ">
-            <img src="root/android-icon-192x192.png" id="profil" class="profil" />
+            <a href="index.html"></a><img src="root/android-icon-192x192.png" id="profil" class="profil" /> </a>
+
             <a class="cv" href="CV.html">CV</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
