--- a/porte-folio.html
+++ b/porte-folio.html
@@ -18,7 +18,7 @@
     <!--Le header DEBUT-->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <img src="assets/image/profil.jpeg" id="profil" class="profil" />
+            <a href="index.html"></a><img src="root/android-icon-192x192.png" id="profil" class="profil" /> </a>
 
             <a class="cv" href="CV.html">CV</a>
 
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="index.html#parcours">Parcours</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Acceuil</a>
+                        <a class="nav-link" href="index.html">Accueil</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
