--- a/CV.html
+++ b/CV.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/cv_02.css">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-
+    <script src="https://cdnjs.com/libraries/pdf.js"></script>
 
 </head>
 
@@ -78,8 +78,12 @@
 
     <main>
         <embed src="assets/cv/Dzénetan Massart CV Online.pdf" type='application/pdf' />
-    </main>
 
+    </main>
+    <footer>
+        <a href="assets/cv/Dzénetan Massart CV Online.pdf" download="Le CV de Dzénetan Massart en ligne"><i class="fas fa-download"></i>Téléchargez le CV</a>
+
+    </footer>
 </body>
 
 </html>
