--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <!--Generate with https://www.favicon-generator.org/-->
-    <link rel="apple-touch-icon" sizes="57x57" href="root/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="root/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="root/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="root/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="root/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="root/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="root/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="root/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="root/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="root/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="root/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="root/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="root/favicon-16x16.png">
-    <link rel="manifest" href="root/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="root/ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="root/ico//apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="root/ico//apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="root/ico//apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="root/ico//apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="root/ico//apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="root/ico//apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="root/ico//apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="root/ico//apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="root/ico//android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="root/ico//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="root/ico//favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="root/ico//favicon-16x16.png">
+    <link rel="manifest" href="root/ico//manifest.json">
     <meta name="msapplication-TileColor" content="#455DB3">
-    <meta name="msapplication-TileImage" content="root/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="root/ico//ms-icon-144x144.png">
     <meta name="theme-color" content="#455DB3">
 
     <!-- Pour les intégrations sur les réseaux sociaux -->
@@ -39,13 +39,13 @@
     <meta property="og:url" content="https://dzenetanmassart.github.io/">
     <meta property="og:title" content="Dzénetan Massart">
     <meta property="og:description" content="Le site web de Dzénetan Massart">
-    <meta property="og:image" content="root/android-icon-192x192.png">
+    <meta property="og:image" content="root/ico//android-icon-192x192.png">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://dzenetanmassart.github.io/">
     <meta property="twitter:title" content="Dzénetan Massart">
     <meta property="twitter:description" content="Le site web de Dzénetan Massart">
-    <meta property="twitter:image" content="root/android-icon-192x192.png">
+    <meta property="twitter:image" content="root/ico//android-icon-192x192.png">
 
 
 </head>
@@ -54,7 +54,7 @@
     <!--Le header DEBUT-->
     <header class="dark background">
         <nav class="navbar navbar-expand-lg ">
-            <a href="index.html"></a><img src="root/android-icon-192x192.png" id="profil" class="profil" /> </a>
+            <a href="index.html"><img src="assets/image/Dzénetan Massart.png" id="profil" height="150px" /> </a>
 
             <a class="cv" href="CV.html">CV</a>
 
