--- a/CV.html
+++ b/CV.html
@@ -5,19 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="57x57" href="root/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="root/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="root/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="root/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="root/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="root/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="root/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="root/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="root/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="root/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="root/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="root/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="root/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="root/ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="root/ico//apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="root/ico//apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="root/ico//apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="root/ico//apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="root/ico//apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="root/ico//apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="root/ico//apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="root/ico//apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="root/ico//android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="root/ico//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="root/ico//favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="root/ico//favicon-16x16.png">
+    <link rel="manifest" href="root/ico//manifest.json">
+    <meta name="msapplication-TileColor" content="#455DB3">
+    <meta name="msapplication-TileImage" content="root/ico//ms-icon-144x144.png">
+    <meta name="theme-color" content="#455DB3">
     <title>CV Dzénetan Massart</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
@@ -33,12 +37,11 @@
     <!--Le header DEBUT-->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a href="index.html"></a><img src="root/android-icon-192x192.png" id="profil" class="profil" /> </a>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="CV_html.html#banniere">Version HTML</a>
-                </li>
-            </ul>
+            <a href="index.html"><img src="assets/image/Dzénetan Massart.png" id="profil" height="150px" /> </a>
+
+            <a class="cv" href="CV_html.html#banniere">Version HTML</a>
+
+
 
             <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-vector-square"></i>
@@ -50,6 +53,10 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#parcours">Parcours</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="porte-folio.html">Porte-Folio</a>
+
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Acceuil</a>
