Amélioration du header

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!--Le header DEBUT-->
     <header class="dark background">
         <nav class="navbar navbar-expand-lg ">
-            <a href="index.html"><img src="assets/image/Dzénetan Massart.png" id="profil" height="150px" /> </a>
+            <a href="index.html" class="navbar-brand"><img src="assets/image/Dzénetan Massart.png" id="profil" height="40px" /> </a>
 
             <a class="cv" href="CV.html">CV</a>
 
@@ -72,6 +72,9 @@
                         <a class="nav-link" href="porte-folio.html">Porte-Folio</a>
 
                     </li>
+
+                </ul>
+                <ul class="navbar-nav mx-2 ">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                   Réseau
@@ -84,7 +87,6 @@
                             <a class="dropdown-item" href="https://sketchfab.com/DzenetanMassart/models">Sketchfab</a>
                             <a class="dropdown-item" href="https://www.codewars.com/users/DzenetanMassart">Codewars</a>
                             <a class="dropdown-item" href="https://www.pinterest.fr/MakeOnWebsoft/_saved/">Pinterest</a>
-
 
                         </div>
                     </li>
