--- a/CV.html
+++ b/CV.html
@@ -58,9 +58,10 @@
                         <a class="nav-link" href="porte-folio.html">Porte-Folio</a>
 
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Acceuil</a>
-                    </li>
+
+
+                </ul>
+                <ul class="navbar-nav mx-2">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                   Réseau
@@ -77,7 +78,6 @@
                         </div>
                     </li>
                 </ul>
-
             </div>
         </nav>
     </header>
