--- a/CV_html.html
+++ b/CV_html.html
@@ -37,7 +37,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark">
-            <a href="index.html"><img src="assets/image/Dzénetan Massart.png" id="profil" height="150px" /> </a>
+            <a href="index.html" class="navbar-brand"><img src="assets/image/Dzénetan Massart.png" id="profil" height="40px" /> </a>
 
             <a class="cv" href="CV.html">Version PDF</a>
 
@@ -56,9 +56,9 @@
                         <a class="nav-link" href="porte-folio.html">Porte-Folio</a>
 
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Accueil</a>
-                    </li>
+
+                </ul>
+                <ul class="navbar-nav mx-2">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                   Réseau
@@ -75,7 +75,6 @@
                         </div>
                     </li>
                 </ul>
-
             </div>
         </nav>
     </header>
