--- a/porte-folio.html
+++ b/porte-folio.html
@@ -32,15 +32,14 @@
 
 <body>
     <!--Le header DEBUT-->
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <a href="index.html"><img src="assets/image/Dzénetan Massart.png" id="profil" height="150px" /> </a>
+    <header class="dark background">
+        <nav class="navbar navbar-expand-lg ">
+            <a href="index.html" class="navbar-brand"><img src="assets/image/Dzénetan Massart.png" id="profil" height="40px" /> </a>
 
             <a class="cv" href="CV.html">CV</a>
 
-            <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-vector-square"></i>
-                        </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="far fa-caret-square-down"></i>                        </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
@@ -49,9 +48,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#parcours">Parcours</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Accueil</a>
-                    </li>
+
+
+                </ul>
+                <ul class="navbar-nav mx-2 ">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                   Réseau
@@ -67,12 +67,10 @@
 
                         </div>
                     </li>
-
-
                 </ul>
-
             </div>
         </nav>
+
     </header>
     <!--Le header FIN-->
     <!--Le main Debut-->
