--- a/CV.html
+++ b/CV.html
@@ -37,7 +37,7 @@
     <!--Le header DEBUT-->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a href="index.html"><img src="assets/image/Dzénetan Massart.png" id="profil" height="150px" /> </a>
+            <a href="index.html" class="navbar-brand"><img src="assets/image/Dzénetan Massart.png" id="profil" height="40px" /> </a>
 
             <a class="cv" href="CV_html.html#banniere">Version HTML</a>
 
