Amélioration du CV

--- a/CV.html
+++ b/CV.html
@@ -84,8 +84,9 @@
     <!--Le header FIN-->
 
     <main>
-        <embed src="assets/cv/Dzénetan Massart CV Online.pdf" type='application/pdf' />
-
+        <a href="assets/cv/Dzénetan Massart CV Online.pdf">
+            <img src="assets/cv/Dzénetan Massart CV Online.jpg" alt="Dzénetan Massart CV Online" srcset="assets/cv/Dzénetan Massart CV Online.jpg">
+        </a>
     </main>
     <footer>
         <a href="assets/cv/Dzénetan Massart CV Online.pdf" download="Le CV de Dzénetan Massart en ligne"><i class="fas fa-download"></i>Téléchargez le CV</a>
