--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
     <!--Le header DEBUT-->
     <header class="dark background">
-        <nav class="navbar navbar-expand-lg ">
+        <nav class="navbar navbar-expand-lg dys">
             <a href="index.html" class="navbar-brand"><img src="assets/image/Dzénetan Massart.png" id="profil" height="40px" /> </a>
 
             <a class="cv" href="CV_html.html">CV</a>
@@ -98,7 +98,7 @@
     <!--Le header FIN-->
     <!--Le main Debut-->
 
-    <main>
+    <main class="dys">
 
         <h1>Bienvenue sur le site de Dzénetan Massart !</h1>
         <div class="intro">
@@ -229,7 +229,7 @@
     <!--Le main FIN-->
 
     <!--La div ayant les applications DEBUT-->
-    <section class="apps">
+    <section class="apps dys">
         <h2 id="apps">Les Applications</h2>
         <p class="description">Ici se trouvent les applications que j'ai créées sur <a class="lien_magique" href="https://github.com/DzenetanMassart?tab=repositories" title="Allons-y !">mon Github  </a>!</p>
         <div class="appsview" id="generate"></div>
@@ -237,10 +237,10 @@
     <!--La div ayant les applications FIN-->
 
     <!--La div ayant le parcours DEBUT-->
-    <section class="parcours">
+    <section class="parcours dys">
         <h2 id="parcours">Le Parcours</h2>
         <p class="description">Ici se trouvent mon parcours d'apprentissage des logiciels !</p>
-        <div class="parc" id="parc">
+        <div class="parc dys" id="parc">
 
         </div>
     </section>
