--- a/CV_html.html
+++ b/CV_html.html
@@ -36,7 +36,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-dark">
+        <nav class="navbar navbar-expand-sm navbar-dark dys">
             <a href="index.html" class="navbar-brand"><img src="assets/image/Dzénetan Massart.png" id="profil" height="40px" /> </a>
 
             <a class="cv" href="CV.html">Version PDF</a>
@@ -78,7 +78,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="dys">
         <!-- La petite bannière-->
         <section id="banniere">
             <aside class="profil"></aside>
