--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
     <main>
 
         <h1>Bienvenue sur le site de Dzénetan Massart !</h1>
-        <div class="intro">
+        <div class="intro dys">
             <p>Ce site a été créé pendant <a href="https://becode.org/fr/" title="Renseignez-vous">la formation "BeCode"</a> et sert à tester les différentes capacités apprises lors de la formation par Dzénetan Massart.</p>
             <p>Entre-temps, ce site a évolué pour vous mettre en avant bien plus que tout ce qui touche au code en énumérant les différentes capacités que Dzénetan Massart vous propose à mettre à contribution pour vos projets.</p>
         </div>
         <div class="inline">
-            <ul class="logiciels">
+            <ul class="logiciels dys">
                 <span> <i class="fas fa-laptop"></i> Liste des logiciels et APIs que j'emplois pour créer ce site:</span>
 
                 <li>
@@ -127,7 +127,7 @@
             </ul>
 
 
-            <ul class="technologies">
+            <ul class="technologies dys">
                 <span> <i class="fas fa-laptop-code"></i> Liste des langages que j'emplois pour créer ce site:</span>
 
                 <li>
@@ -147,7 +147,7 @@
                 </li>
             </ul>
 
-            <ul class="capacites">
+            <ul class="capacites dys">
                 <span> <i class="fas fa-briefcase"></i> Liste des capacités que je peux vous proposer</span>
 
                 <li title="J'utilise donc Adobe Premiere et Adobe After Effect">
@@ -193,7 +193,7 @@
                     Animation de communauté sur les réseaux sociaux <sup>(Community Managing)</sup>
                 </li>
             </ul>
-            <ul class="programmes">
+            <ul class="programmes dys">
                 <span> <i class="fas fa-pencil-ruler"></i> Liste des logiciels que j'emplois souvent</span>
 
                 <li>
@@ -229,15 +229,15 @@
     <!--Le main FIN-->
 
     <!--La div ayant les applications DEBUT-->
-    <section class="apps">
-        <h2 id="apps">Les Applications</h2>
-        <p class="description">Ici se trouvent les applications que j'ai créées sur <a class="lien_magique" href="https://github.com/DzenetanMassart?tab=repositories" title="Allons-y !">mon Github  </a>!</p>
+    <section class="apps dys">
+        <h2 id="apps">Les Outils</h2>
+        <p class="description">Ici se trouvent les outils que j'ai créées sur <a class="lien_magique" href="https://github.com/DzenetanMassart?tab=repositories" title="Allons-y !">mon Github  </a>!</p>
         <div class="appsview" id="generate"></div>
     </section>
     <!--La div ayant les applications FIN-->
 
     <!--La div ayant le parcours DEBUT-->
-    <section class="parcours">
+    <section class="parcours dys">
         <h2 id="parcours">Le Parcours</h2>
         <p class="description">Ici se trouvent mon parcours d'apprentissage des logiciels !</p>
         <div class="parc" id="parc">
@@ -246,7 +246,7 @@
     </section>
 
     <!--La div ayant le parcours FIN-->
-    <div class="copyright">Copyright © 2017-2021 Dzénetan Massart</div>
+    <div class="copyright">Copyright © 2017-2022 Dzénetan Massart</div>
 
 
     <!--Les scripts-->
