Ajout d'une nouvelle entrée dans la timeline

--- a/CV_html.html
+++ b/CV_html.html
@@ -254,6 +254,11 @@
         <h3>Formations</h3>
 
         <section class="timeline">
+            <p><b>2021-2022</b>- Formation d'<b>Employé de Service</b> - IEPSCF NAMUR-CADETS Enseignement de Promotion Sociale
+                <span class="icon">
+                                <i class="fas fa-map-marker cm"></i>
+                            </span>
+            </p>
             <p><b>2020-2021</b>- Formation de <b>Community Manager</b> - Centre de Formation à Distance
                 <span class="icon">
                                 <i class="fas fa-map-marker cm"></i>
