--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <nav class="navbar navbar-expand-lg dys">
             <a href="index.html" class="navbar-brand"><img src="assets/image/Dzénetan Massart.png" id="profil" height="40px" /> </a>
 
-            <a class="cv" href="CV_html.html">CV</a>
+            <a class="cv" href="CV.html">CV</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="far fa-caret-square-down"></i>                        </button>
@@ -220,7 +220,12 @@
                 <li>
                     OBS Studio
                 </li>
-
+                <li>
+                    Microsoft Word
+                </li>
+                <li>
+                    Microsoft PowerPoint
+                </li>
             </ul>
         </div>
 
