Mise à jour de fin Mai 2022
Suppression du Porte-Folio, amélioration du CV et ajout de logiciels et capacités.

--- a/index.html
+++ b/index.html
@@ -63,14 +63,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#apps">Applications</a>
+                        <a class="nav-link" href="index.html#outils">Outils</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#parcours">Parcours</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="porte-folio.html">Porte-Folio</a>
-
                     </li>
 
                 </ul>
@@ -192,6 +188,9 @@
                 <li title="J'utilise donc ABSOLUMENT TOUT">
                     Animation de communauté sur les réseaux sociaux <sup>(Community Managing)</sup>
                 </li>
+                <li title="J'utilise After Effect, Adobe Premiere, Blender et Panzoid">
+                    Création d'intro' <sup>(animation de logo)</sup>
+                </li>
             </ul>
             <ul class="programmes dys">
                 <span> <i class="fas fa-pencil-ruler"></i> Liste des logiciels que j'emplois souvent</span>
@@ -226,6 +225,15 @@
                 <li>
                     Microsoft PowerPoint
                 </li>
+                <li>
+                    Panzoid
+                </li>
+                <li>
+                    Blender
+                </li>
+                <li>
+                    FireAlpaca
+                </li>
             </ul>
         </div>
 
@@ -235,7 +243,7 @@
 
     <!--La div ayant les applications DEBUT-->
     <section class="apps dys">
-        <h2 id="apps">Les Outils</h2>
+        <h2 id="outils">Les Outils</h2>
         <p class="description">Ici se trouvent les outils que j'ai créées sur <a class="lien_magique" href="https://github.com/DzenetanMassart?tab=repositories" title="Allons-y !">mon Github  </a>!</p>
         <div class="appsview" id="generate"></div>
     </section>
