--- a/CV_PDF.html
+++ b/CV_PDF.html
@@ -49,15 +49,12 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#apps">Applications</a>
+                        <a class="nav-link" href="index.html#outils">Outils</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#parcours">Parcours</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="porte-folio.html">Porte-Folio</a>
 
-                    </li>
 
 
                 </ul>
