--- a/CV.html
+++ b/CV.html
@@ -261,7 +261,9 @@
         <h3>Formations</h3>
 
         <section class="timeline">
-            <p><b>2021-2022</b>- Formation d'<b>Employé de Service</b> - IEPSCF NAMUR-CADETS Enseignement de Promotion Sociale
+            <p class="stage"><b>2022</b> - <b>Employé de Services</b> - CollègePieX - Châtelineau <span>STAGE</span></p>
+
+            <p><b>2021-2022</b>- Formation d'<b>Employé de Services</b> - IEPSCF NAMUR-CADETS Enseignement de Promotion Sociale
                 <span class="icon">
                                 <i class="fas fa-map-marker cm"></i>
                             </span>
