--- a/CV.html
+++ b/CV.html
@@ -209,7 +209,10 @@
 
         <section class="timeline">
             <p class="stage"><b>2022</b> - <b>Employé de Services</b> - CollègePieX - Châtelineau <span>STAGE</span></p>
-
+            <span class="icon ">
+                <i class="fas fa-map-marker js "></i>
+            </span>
+            
             <p><b>2021-2022</b>- Formation d'<b>Employé de Services</b> - IEPSCF NAMUR-CADETS Enseignement de Promotion Sociale
                 <span class="icon">
                                 <i class="fas fa-map-marker cm"></i>
