Nouvelle version de la navbar

--- a/CV.html
+++ b/CV.html
@@ -34,7 +34,7 @@
 <body>
     <header class="dys" id="navigation">
 
-        <a href="index.html" class="active"><img src="assets/image/Dzénetan Massart.png" id="profil" /> </a>
+        <a href="index.html" class="active"><img src="assets/image/Dzénetan Massart.png" id="profil" />Accueil </a>
 
         <a class="cv" href="CV_PDF.html">Version PDF</a>
         <a href="index.html#outils">Outils</a>
