--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!--Le header FIN-->
     <header class="dys" id="navigation">
 
-        <a href="index.html" class="active"><img src="assets/image/Dzénetan Massart.png" id="profil" /> </a>
+        <a href="index.html" class="active"><img src="assets/image/Dzénetan Massart.png" id="profil" /> Accueil </a>
 
         <a class="cv" href="CV.html">CV</a>
         <a href="#outils">Outils</a>
