--- a/CV_PDF.html
+++ b/CV_PDF.html
@@ -36,7 +36,7 @@
     <!--Le header DEBUT-->
     <header class="dys" id="navigation">
 
-        <a href="index.html" class="active"><img src="assets/image/Dzénetan Massart.png" id="profil" /> </a>
+        <a href="index.html" class="active"><img src="assets/image/Dzénetan Massart.png" id="profil" /> Accueil</a>
 
         <a class="cv" href="CV.html">CV</a>
         <a href="index.html#outils">Outils</a>
