Amélioration du CV et de la navigation

--- a/CV.html
+++ b/CV.html
@@ -34,11 +34,11 @@
 <body>
     <header class="dys" id="navigation">
 
-        <a href="index.html" class="active"><img src="assets/image/Dzénetan Massart.png" id="profil" />Accueil </a>
+        <a href="index.html" class="active" alt="Accueil"><img src="assets/image/Dzénetan Massart.png" id="profil" /><span>Accueil</span> </a>
 
-        <a class="cv" href="CV_PDF.html">Version PDF</a>
-        <a href="index.html#outils">Outils</a>
-        <a href="index.html#parcours">Parcours</a>
+        <a class="cv" href="CV_PDF.html" alt="Version PDF Général">📜<span>Version PDF Général</span></a>
+        <a href="index.html#outils" class="outils" alt="Outils">🧰<span>Outils</span></a>
+        <a href="index.html#parcours" class="parcours" alt="Parcours">💼<span>Parcours</span></a>
 
 
         <script src="assets/navbar/navbar.js"></script>
@@ -71,10 +71,13 @@
 
                 <div>
                     <div>
-                        <p>🇫🇷 Français <sup>(Langue Maternelle)</sup></p>
+                        <p><img src="https://cdn-icons-png.flaticon.com/512/330/330490.png" alt="Français" title="Français" width="20px" srcset="https://cdn-icons-png.flaticon.com/512/330/330490.png"> Français </p>
+                        <sub>(Langue Maternelle)</sub>
                     </div>
                     <div>
-                        <p>🇬🇧 Anglais <sup>(Niveau technique, spécialisé «infographie»)</sup></p>
+                        <p><img src="https://cdn-icons-png.flaticon.com/512/555/555417.png" alt="Anglais" title="Anglais" width="20px"> Anglais </p>
+                        <sub>(Niveau technique, spécialisé «infographie»)</sub>
+
                     </div>
                 </div>
             </aside>
