--- a/CV_PDF.html
+++ b/CV_PDF.html
@@ -22,7 +22,7 @@
     <meta name="msapplication-TileColor" content="#455DB3">
     <meta name="msapplication-TileImage" content="root/ico//ms-icon-144x144.png">
     <meta name="theme-color" content="#455DB3">
-    <title>CV Dzénetan Massart</title>
+    <title>CV Dzénetan Massart Général</title>
     <link rel="stylesheet" href="assets/navbar/navbar.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/cv_02.css">
