--- a/assets/navbar/navbar.html
+++ b/assets/navbar/navbar.html
@@ -16,9 +16,9 @@
 
         <a href="index.html" class="active"><img src="assets/image/Dzénetan Massart.png" id="profil" /> </a>
 
-        <a class="cv" href="CV_PDF.html">Version PDF</a>
-        <a href="index.html#outils">Outils</a>
-        <a href="index.html#parcours">Parcours</a>
+        <a class="cv" href="CV_PDF.html">📜<span>Version PDF Général</span></a>
+        <a href="index.html#outils" class="outils"> 🧰<span>Outils</span></a>
+        <a href="index.html#parcours" class="parcours">💼 <span>Parcours</span></a>
 
 
     </header>
