--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
     <!--Le header FIN-->
     <header class="dys" id="navigation">
 
-        <a href="index.html" class="active"><img src="assets/image/Dzénetan Massart.png" id="profil" /> Accueil </a>
+        <a href="index.html" class="active"><img src="assets/image/Dzénetan Massart.png" id="profil" /> <span>Accueil</span> </a>
 
-        <a class="cv" href="CV.html">CV</a>
-        <a href="#outils">Outils</a>
-        <a href="#parcours">Parcours</a>
+        <a class="cv" href="CV.html">📜<span>CV</span></a>
+        <a href="#outils" class="outils">🧰<span>Outils</span></a>
+        <a href="#parcours" class="parcours">💼<span>Parcours</span></a>
 
 
     </header>
